--- a/msvc-items-dev.properties
+++ b/msvc-items-dev.properties
@@ -1,4 +1,4 @@
 server.port=8007
 configuracion.texto=Configuracion entorno dev
-configuracion.autor=Ricardo
+configuracion.autor=Gabriel
 configuracion.email=juanma@correo.com
